--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <tbody>
             <tr>
                 <td valign="top" bgcolor="#131122" style="text-align:center;">
-                    <span style="font-size:32px;color:#E56600;"><a href="https://pan.quark.cn/s/b8941d9d5ab6">
+                    <span style="font-size:32px;color:#E56600;"><a href="https://2.aliyun.dh38.cn/common/channel/redirect/?cid=360719">
                         <img src="images/抖阴.png" width="560" height="950" border="0" alt="抖阴"></a><br />
                     </span> 
                     <h1><p class="transparent-text"><span style="font-size:0.1px;">抖阴</span></p></h1>
